# mcpreg

./: Cargo.toml  README.md
src/: color.rs  config.rs  error.rs  fuzzy.rs  main.rs
src/api/: client.rs  types.rs
src/commands/: alias.rs  audit.rs  backup.rs  browse.rs  bundle.rs  cache.rs  changelog.rs  check.rs  clean.rs  compare.rs  compat.rs  completions.rs  config_cmd.rs  count.rs  deps.rs  diff.rs  doctor.rs  env.rs  exec.rs  export.rs  favorites.rs  graph.rs  health.rs  history.rs  info.rs  init.rs  inspect.rs  install.rs  lint.rs  list.rs  lock.rs  mirror.rs  mod.rs  outdated.rs  pin.rs  profile.rs  prompts.rs  publish.rs  random.rs  rate.rs  (+19 more)
src/registry/: db.rs  mod.rs  routes.rs  seed.rs  server.rs
