[package]
name = "mcpreg"
version = "0.27.0"
edition = "2021"
description = "Open source registry and marketplace for MCP (Model Context Protocol) servers"
license = "MIT"
repository = "https://github.com/quantumnic/mcpreg"
readme = "README.md"
keywords = ["mcp", "registry", "model-context-protocol", "ai", "tools"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "mcpreg"
path = "src/main.rs"

[dependencies]
axum = "0.7"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dirs = "5"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
